cannon: Migrate to FBEv2 userdata encryption
Signed-off-by: bengris32 <bengris32@protonmail.ch>
Change-Id: I9cc1c2a467b9efda60e53a045843414f6c8a27b9
Signed-off-by: LinkBoi00 <linkdevel@protonmail.com>

--- a/rootdir/etc/init.mt6853.rc
+++ b/rootdir/etc/init.mt6853.rc
@@ -91,6 +91,9 @@ on charger
 
     start vendor.light-default
 
+on early-fs
+    start vold
+
 on fs
     # mount fstab
     write /sys/kernel/tracing/trace_marker "B|1|Mount"
