cannon: rro_overlays: Enable correct Settings RRO based on hardware SKU prop
Signed-off-by: LinkBoi00 <linkdevel@protonmail.com>

--- a/rro_overlays/CannonCNSettingsProviderOverlay/AndroidManifest.xml
+++ b/rro_overlays/CannonCNSettingsProviderOverlay/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <overlay
         android:isStatic="true"
         android:priority="850"
-        android:requiredSystemPropertyName="ro.boot.hwc"
-        android:requiredSystemPropertyValue="CN"
+        android:requiredSystemPropertyName="ro.boot.hardware.sku"
+        android:requiredSystemPropertyValue="cannon"
         android:targetPackage="com.android.providers.settings" />
 </manifest>
